--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="login-container">
     <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
         <h2>Login</h2>
@@ -20,3 +21,4 @@
         <button type="submit" [disabled]="loginForm.invalid">Login</button>
     </form>
 </div>
+
