--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+   background-color: #808080;
+}
+
+*{
+    color: rgb(0, 0, 0);
+}
+
+html {
+    scroll-behavior: smooth;
+  }
